Dodata logika za upis entiteta u xml fajlove.

--- a/Project/Project.csproj
+++ b/Project/Project.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Model\ActionSale.cs" />
     <Compile Include="Model\AdditionalService.cs" />
+    <Compile Include="Model\DataHandler.cs" />
     <Compile Include="Model\Furniture.cs" />
     <Compile Include="Model\FurnitureType.cs" />
     <Compile Include="Model\Sale.cs" />
@@ -56,8 +57,15 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Data\" />
+    <Content Include="Data\action_sales.xml" />
+    <Content Include="Data\additional_services.xml" />
+    <Content Include="Data\furniture.xml" />
+    <Content Include="Data\furniture_types.xml" />
+    <Content Include="Data\sales.xml" />
+    <Content Include="Data\stores.xml" />
+    <Content Include="Data\users.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
