--- a/Project/Project.csproj
+++ b/Project/Project.csproj
@@ -52,7 +52,8 @@
     <Compile Include="Model\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Util\Utility.cs" />
+    <Compile Include="UI\AdminWindow.cs" />
+    <Compile Include="UI\SalesmanWindow.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -64,7 +65,6 @@
     <Content Include="Data\furniture.xml" />
     <Content Include="Data\furniture_types.xml" />
     <Content Include="Data\sales.xml" />
-    <Content Include="Data\stores.xml" />
     <Content Include="Data\users.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
