--- a/Project/Project.csproj
+++ b/Project/Project.csproj
@@ -47,13 +47,15 @@
     <Compile Include="Model\DataHandler.cs" />
     <Compile Include="Model\Furniture.cs" />
     <Compile Include="Model\FurnitureType.cs" />
+    <Compile Include="Model\ProjectMain.cs" />
     <Compile Include="Model\Sale.cs" />
     <Compile Include="Model\Store.cs" />
     <Compile Include="Model\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UI\AdminWindow.cs" />
-    <Compile Include="UI\SalesmanWindow.cs" />
+    <Compile Include="UI\AdminUI.cs" />
+    <Compile Include="UI\SalesmanUI.cs" />
+    <Compile Include="Util\GenericSerializer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
