--- a/MyApplication/MyApplication/MyApplication.csproj
+++ b/MyApplication/MyApplication/MyApplication.csproj
@@ -63,7 +63,6 @@
     <Compile Include="UI\LoginWindow.xaml.cs">
       <DependentUpon>LoginWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Util\UserUtil.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -96,7 +95,7 @@
     <Compile Include="Model\AdditionalService.cs" />
     <Compile Include="Model\Furniture.cs" />
     <Compile Include="Model\FurnitureType.cs" />
-    <Compile Include="Model\Application.cs" />
+    <Compile Include="Model\Singleton.cs" />
     <Compile Include="Model\Sale.cs" />
     <Compile Include="Model\Store.cs" />
     <Compile Include="Model\User.cs" />
@@ -133,6 +132,8 @@
     <Resource Include="Data\sales.xml" />
     <Resource Include="Data\users.xml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Util\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
