--- a/MyApplication/MyApplication/MyApplication.csproj
+++ b/MyApplication/MyApplication/MyApplication.csproj
@@ -128,12 +128,14 @@
     <Resource Include="Data\action_sales.xml" />
     <Resource Include="Data\additional_services.xml" />
     <Resource Include="Data\furniture.xml" />
-    <Resource Include="Data\furniture_types.xml" />
     <Resource Include="Data\sales.xml" />
     <Resource Include="Data\users.xml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Util\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Data\furniture_types.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
