--- a/MyApplication/MyApplication/MyApplication.csproj
+++ b/MyApplication/MyApplication/MyApplication.csproj
@@ -88,12 +88,19 @@
     <Compile Include="UI\LoginWindow.xaml.cs">
       <DependentUpon>LoginWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UI\PriceValidationRule.cs" />
     <Compile Include="UI\SalesmanWindow.xaml.cs">
       <DependentUpon>SalesmanWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="UI\UserWindow.xaml.cs">
       <DependentUpon>UserWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UI\DiscountValidationRule.cs" />
+    <Compile Include="UI\IntegerValidationRule.cs" />
+    <Compile Include="UI\PasswordValidationRule.cs" />
+    <Compile Include="UI\StringValidationRule.cs" />
+    <Compile Include="UI\UsernameValidationRule.cs" />
+    <Compile Include="Util\InputValidator.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -182,8 +189,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Util\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
